# adk-learning

./: main.py  pyproject.toml
1-basic-agent/greeting_agent/: .env  agent.py
10-sequential-agents/lead_qualification_agent/: agent.py
2-tool-agent/tool_agent/: agent.py
3-litellm-agent/local_agent/: agent.py
4-structured-output/email_agent/: agent.py
5-sessions-state/: basic_state_session.py
5-sessions-state/question_answering_agent/: agent.py
6 - persistent-storage/: main.py  utils.py
6 - persistent-storage/memory_agent/: agent.py
6a - persistent-storage/: main.py  utils.py
6b - persistent-storage/: main.py  utils.py
6b - persistent-storage/memory_agent/: agent.py
7-multi_agent/manager/: agent.py
7a - multi-agent/manager/: agent.py
7a - multi-agent/manager/tools/: tools.py
8-stateful-multi-agents/: main.py  utils.py
8-stateful-multi-agents/customer_service_agent/: agent.py
9-callbacks/before_after_agent/: agent.py
9-callbacks/before_after_model/: agent.py
9-callbacks/before_after_tool/: agent.py
version1/: agent_runner.py
version1/agents/website_builder_simple/: agent.py
version1/output/: 2025-11-24_19-18-37_generated_page.html  2025-11-24_19-53-38_generated_page.html  2025-11-25_08-20-44_generated_page.html
version1/tools/: file_writer_tool.py
version1/utils/: file_loader.py
version2/agents/code_writer/: agent.py
version2/agents/designer/: agent.py  instruction.txt
version2/agents/requirements_writer/: agent.py  description.txt  instruction.txt
version2/utils/: file_loader.py
version3/tools/: file_writer_tool.py
(+34 files in other folders)
